introduction component modified

--- a/public/i18n/en.json
+++ b/public/i18n/en.json
@@ -4,5 +4,8 @@
         "projects": "Projects",
         "experiences": "Experiences",
         "contact": "Contact"
+    },
+    "about": {
+        "intro": "{{about}}"
     }
 }
