page section object generated

--- a/public/i18n/en.json
+++ b/public/i18n/en.json
@@ -7,5 +7,14 @@
     },
     "about": {
         "intro": "{{about}}"
+    },
+    "projects": {
+        "title": "Projects"
+    },
+    "experiences": {
+        "title": "Experiences"
+    },
+    "contact": {
+        "title": "Contact"
     }
 }
