project title integrated with ng service

--- a/public/i18n/en.json
+++ b/public/i18n/en.json
@@ -9,7 +9,7 @@
         "intro": "{{about}}"
     },
     "projects": {
-        "title": "Projects"
+        "title": "{{title}}"
     },
     "experiences": {
         "title": "Experiences"
