english json file updated & modified

--- a/public/i18n/en.json
+++ b/public/i18n/en.json
@@ -12,9 +12,9 @@
         "title": "{{title}}"
     },
     "experiences": {
-        "title": "Experiences"
+        "title": "{{title}}"
     },
     "contact": {
-        "title": "Contact"
+        "title": "{{title}}"
     }
 }
