--- a/public/i18n/en.json
+++ b/public/i18n/en.json
@@ -16,5 +16,16 @@
     },
     "contact": {
         "title": "{{title}}"
+    },
+    "experience": {
+        "company": "{{company}}",
+        "platform": "{{platform}}",
+        "type": "{{type}}",
+        "title": "{{title}}",
+        "start": "{{start}}",
+        "end": "{{end}}",
+        "tasks":[
+            "{{task}}"
+        ]
     }
 }
