about polish version object

--- a/public/i18n/pl.json
+++ b/public/i18n/pl.json
@@ -1,6 +1,6 @@
 {
     "navbar": {
-        "home": "Home",
+        "home": "Główna",
         "projects": "Projekty",
         "experiences": "Doświadczenie",
         "contact": "Kontakt"
