--- a/public/i18n/pl.json
+++ b/public/i18n/pl.json
@@ -9,13 +9,13 @@
         "intro": "{{about}}"
     },
     "projects": {
-        "title": "{{title}}"
+        "title": "Projekty"
     },
     "experiences": {
-        "title": "{{title}}"
+        "title": "Doświadczenie"
     },
     "contact": {
-        "title": "{{title}}"
+        "title": "Kontakt"
     },
     "experience": {
         "company": "{{company}}",
