fixed ugly flex layout

--- a/public/i18n/de.json
+++ b/public/i18n/de.json
@@ -9,7 +9,8 @@
         "intro": "{{aboutMe}}"
     },
     "projects": {
-        "title": "Projekte"
+        "title": "Projekte",
+        "view": "Alles sehen"
     },
     "experiences": {
         "title": "Erfahrungen"
