--- a/public/i18n/pl.json
+++ b/public/i18n/pl.json
@@ -9,7 +9,8 @@
         "intro": "{{aboutMe}}"
     },
     "projects": {
-        "title": "Projekty"
+        "title": "Projekty",
+        "view": "Sprawdź"
     },
     "experiences": {
         "title": "Doświadczenie"
